Comunicación completa back -> API